--- a/PROYECTO FINAL ARGENTINA PROGRAMA DEF/index.html
+++ b/PROYECTO FINAL ARGENTINA PROGRAMA DEF/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
     <h1>Inicio del Proyecto</h1>
+    <h3>Hola say tal</h3>
+    <h2>Bienvenidos a mi portafolio</h2>
+
+    <header>
+        <nav>
+            <li>Inicio</li>
+            <li>Acerca de</li>
+            <li>Proyectos</li>
+            <li>Contacto</li>
+        </nav>
+    </header>
+
+
     
 </body>
 </html>
