--- a/PROYECTO FINAL ARGENTINA PROGRAMA DEF/index.html
+++ b/PROYECTO FINAL ARGENTINA PROGRAMA DEF/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
+    <link rel="stylesheet" href="style.css">
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
 </head>
 <body>
     <h1>Inicio del Proyecto</h1>
@@ -13,14 +17,18 @@
 
     <header>
         <nav>
-            <li>Inicio</li>
-            <li>Acerca de</li>
-            <li>Proyectos</li>
-            <li>Contacto</li>
+            <li> <a href="index.html"></a> Inicio</li>
+            <li> <a href="pages/acerca-de.html"></a> Acerca de</li>
+            <li> <a href="pages/proyectos.html"></a> Proyectos</li>
+            <li> <a href="pages/contacto.html"></a> Contacto</li>
         </nav>
     </header>
 
 
+
+
     
+    <!--Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
