--- a/PROYECTO FINAL ARGENTINA PROGRAMA DEF/index.html
+++ b/PROYECTO FINAL ARGENTINA PROGRAMA DEF/index.html
@@ -11,23 +11,43 @@
 
 </head>
 <body>
+
+
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="pages/acerca-de.html">Acerca De</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="pages/proyectos.html">Proyectos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+    </header>
+
     <h1>Inicio del Proyecto</h1>
     <h3>Hola say tal</h3>
     <h2>Bienvenidos a mi portafolio</h2>
 
-    <header>
-        <nav>
-            <li> <a href="index.html"></a> Inicio</li>
-            <li> <a href="pages/acerca-de.html"></a> Acerca de</li>
-            <li> <a href="pages/proyectos.html"></a> Proyectos</li>
-            <li> <a href="pages/contacto.html"></a> Contacto</li>
-        </nav>
-    </header>
 
 
 
 
-    
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
