--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="style.css">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body>
+<body class="body-index">
 
 
     <header>
@@ -40,9 +40,11 @@
 
     </header>
 
-    <h1>Inicio del Proyecto</h1>
-    <h3>Hola say tal</h3>
-    <h2>Bienvenidos a mi portafolio</h2>
+    <div class="titulo">
+      <h2 class="titulo-index">Bienvenidos a mi portafolio</h2>
+      <h3 class="subtitulo-index">Te invito a conocer acerca de mi y mis proyectos</h3>
+    </div>
+
 
 
 
