--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
 
 
 
+    <!--Footer-->
+
+    <div class="fixed-bottom">
+      <footer>Este es el footer de mi sitio web</footer>      
+    </div>
 
 
 
