--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -7,7 +7,7 @@
     <title>Inicio</title>
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
 </head>
 <body class="body-index">
@@ -37,19 +37,31 @@
               </div>
             </div>
           </nav>
-
     </header>
 
-    <div class="titulo">
-      <h2 class="titulo-index">Bienvenidos a mi portafolio</h2>
-      <h3 class="subtitulo-index">Te invito a conocer acerca de mi y mis proyectos</h3>
+    <div class="card" style="width: 18rem;">
+        <img src="/img/img1.jpeg" class="card-img-top" alt="Foto mia">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="/pages/contacto.html" class="btn btn-primary">Contactame</a>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+    <!--Footer-->
+    <div class="fixed-bottom">
+        <footer>Este es el footer de mi sitio web</footer>      
     </div>
 
 
-
-
-
-
+    
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
