--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body class="body-index">
+<body>
 
 
     <header>
@@ -49,9 +49,8 @@
 
     <!--Footer-->
 
-    <div class="fixed-bottom">
       <footer>Este es el footer de mi sitio web</footer>      
-    </div>
+
 
 
 
