--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -25,13 +25,13 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/acerca-de.html">Acerca De</a>
+                    <a class="nav-link" href="/pages/acerca-de.html">Acerca De</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/proyectos.html">Proyectos</a>
+                    <a class="nav-link" href="/pages/proyectos.html">Proyectos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="/pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -40,12 +40,11 @@
     </header>
 
     
-    <!-- <h2 class="titulo-pagina">Acerca de Mi</h2> --> 
-      
+    <h2 class="titulo-pagina">Acerca de Mi</h2>
       <div class="card">
         <img src="/img/img2.jpg" class="card-img-top" alt="Foto mia">
         <div class="card-body">
-          <h5 class="card-title">Acerca de mi :)</h5>
+          <h5 class="card-title">Acerca de Mi</h5>
           <p class="card-text">Me llamo Milagros, tengo 18 años y soy de Rosario. Me gusta viajar, hacer senderismo y cocinar. Comencé a interesarme en la programacion el año pasado. Este 2023 voy a estudiar la Licenciatura en Ciencias de la Computacion, en la Universidad Nacional de Rosario (UNR). Espero que la carrera me ayude a profundizarme en esta maravillosa área.</p>
           <p class="card-text">
             <ul>
