--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -4,40 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Proyectos</title>
+    <script src="https://kit.fontawesome.com/e423abbd6a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/style.css">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/pages/acerca-de.html">Acerca De</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/pages/proyectos.html">Proyectos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/pages/contacto.html">Contacto</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/acerca-de.html">Acerca De</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/proyectos.html">Proyectos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+</header>
 
-    
+
+
+    <!--  <h2>Acá podés ver los proyectos en los que he trabajado</h2> -->
+
+    <div class="lista-de-proyectos">
+      <div class="fila">
+        <div class="proyecto"> <h5>Proyecto N°1</h5><img src="/img/captura1.jpg" alt=""></div> 
+        <div class="proyecto"> <h5>Proyecto N°2</h5><img src="/img/captura2.jpg" alt=""></div> 
+        <div class="proyecto"> <h5>Proyecto N°3</h5><img src="/img/img6.jpg" alt=""></div> 
+      </div>
+
+      <div class="fila">
+        <div class="proyecto"> <h5>Proyecto N°4</h5><img src="/img/img7.jpg" alt=""></div> 
+        <div class="proyecto"> <h5>Proyecto N°5</h5><img src="/img/img4.jpg" alt=""></div> 
+        <div class="proyecto"> <h5>Proyecto N°6</h5><img src="/img/img5.jpg" alt=""></div> 
+      </div>
+
+    </div>
 
 
     <!--Footer-->
