--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -45,11 +45,12 @@
     <div class="lista-de-proyectos">
       <div class="fila">
 
-        <div class="proyecto"> <h5>Proyecto N°1</h5>
+        <div class="proyecto"> <h5>Proyecto N°1: Página Web de un PetShop</h5>
           <div class="proyecto-imagen">
             <img src="/img/captura1.jpg" alt="" class="proyecto-img">
             <div class="proyecto-overlay">
               <div class="proyecto-iconos">
+                
                 <a href="https://github.com/milisotelo/pet-shop" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://petshop-383a37.netlify.app/" target="_blank"> <i class="fa-solid fa-earth-americas"></i></a>
               </div> 
@@ -58,7 +59,7 @@
         </div> 
 
 
-        <div class="proyecto"> <h5>Proyecto N°2</h5>
+        <div class="proyecto"> <h5>Proyecto N°2: Web de un Cine (TP grupal)</h5>
           <div class="proyecto-imagen">
             <img src="/img/captura2.jpg" alt="" class="proyecto-img">
             <div class="proyecto-overlay">
