--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -40,11 +40,13 @@
           </nav>
     </header>
 
+    <h3 class="titulo-pagina">Acerca de Mi</h3>
+
 
       <div class="card">
         <img src="/img/img2.jpg" class="card-img-top" alt="Foto mia">
         <div class="card-body">
-          <h5 class="card-title">Acerca de Mi</h5>
+          
           <p class="card-text">Me llamo Milagros, tengo 18 años y soy de Rosario. Me gusta viajar, hacer senderismo y cocinar. Comencé a interesarme en la programacion el año pasado. Este 2023 voy a estudiar la Licenciatura en Ciencias de la Computacion, en la Universidad Nacional de Rosario (UNR). Espero que la carrera me ayude a profundizarme en esta maravillosa área.</p>
           <p class="card-text">
             <ul>
