--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,6 +40,8 @@
 
   </header>
 
+  <h3 class="titulo-pagina">Contacto</h3>
+
   <div class="contacto">
     <div class="imagen-contacto"><img src="/img/img8.jpg" alt=""></div>
 
@@ -52,7 +54,7 @@
         </h2>
         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
           <div class="accordion-body">
-            <a href="mailto:sotelomariamilagros@gmail.com"><i class="fa-solid fa-envelope-open-text"></i></a>
+            <a href="mailto:sotelomariamilagros@gmail.com"><i class="fa-solid fa-square-envelope"></i></a>
           </div>
         </div>
       </div>
