--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -37,10 +37,7 @@
         </div>
       </nav>
 </header>
-
-
-
-    <!--  <h2>Acá podés ver los proyectos en los que he trabajado</h2> -->
+  <h3 class="titulo-pagina">Proyectos</h3>
 
     <div class="lista-de-proyectos">
       <div class="fila">
