--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -78,7 +78,7 @@
 
 
     <!--Footer-->
-    <footer>Este es el footer de mi sitio web</footer>      
+    <footer>(C) Copyright 2023</footer>      
     
 
 
