--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -90,6 +90,8 @@
 
   </div>
   
+  
+  
 
 
 
@@ -97,7 +99,10 @@
 
   <!--Footer-->
 
-  <footer>Este es el footer de mi sitio web</footer> 
+  
+    <footer>(C) Copyright 2023</footer> 
+  
+  
 
 
     <!--Bootstrap-->
