--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -130,7 +130,11 @@
 
 
     <!--Footer-->
-    <footer>Este es el footer de mi sitio web</footer>    
+    
+      <footer>(C) Copyright 2023</footer>    
+
+
+    
 
 
     <!--Bootstrap-->
