--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!--Footer-->
 
-      <footer>Este es el footer de mi sitio web</footer>      
+      <footer>(C) Copyright 2023</footer>      
 
 
 
