--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,7 +52,7 @@
             Email
           </button>
         </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
           <div class="accordion-body">
             <a href="mailto:sotelomariamilagros@gmail.com"><i class="fa-solid fa-square-envelope"></i></a>
           </div>
