--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Amaranth&family=Concert+One&family=Dosis:wght@600&family=Fjalla+One&family=Laila:wght@500&family=Pridi&family=Staatliches&family=Unbounded&family=Varela+Round&family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
 
